--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.32MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-215.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇭🇰 香港-454.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.28MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.48MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.02MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-22.29MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-501.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-544.1KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-777.7KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-182.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇨🇳 中国-470.6KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-409.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.81MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2, server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-215.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-454.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.28MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-22.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-544.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-777.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活9天)香港-3.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
