--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-518.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-444.9KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇰🇷 韩国-308.6KB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-336.1KB/s(Youtube:不良林), server: jp06.xiaoqi99.cf, port: 10125, type: vmess, uuid: fbf813bf-8df7-4729-8e94-667b17544e0f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06.xiaoqi99.cf}}
-  - {name: 🇨🇳 中国-170.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-409.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.81MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2, server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-454.6KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20713, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.58MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-182.8KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-419.1KB/s(Youtube:不良林), server: 36.134.154.119, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-368.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-543.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 香港-4.99MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-4.30MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-518.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-308.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.49MB/s(Youtube:不良林)
-      - 🇯🇵 日本-336.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-409.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.81MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-454.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-419.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-543.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
